--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -49,7 +49,7 @@ body {
   margin: auto;
   width: 75vw;
   background-color: rgb(45, 45, 45);
-  box-shadow: 0px 0px 5px cornflowerblue;
+  /*box-shadow: 0px 0px 5px cornflowerblue;*/
 }
 
 button {
@@ -167,6 +167,7 @@ button {
   margin: 0 auto;
   text-align: center;
   padding: 0;
+  padding-bottom: 10%;
 }
 
 .bet-item {
@@ -327,4 +328,50 @@ button {
 .price {
   color: chartreuse;
   font-weight: 900;
+}
+
+footer {
+  width: 75vw;
+  position: fixed;
+  bottom: 0;
+  background-color: rgb(45, 45, 45);
+}
+
+.insructions {
+  margin: 10px;
+}
+
+.instructions li {
+  color: darkorange;
+  list-style-type: none;
+}
+
+.hide-button {
+  float: right;
+  position: relative;
+  margin: 10px;
+  background-color: cornflowerblue;
+  border: none;
+  border-radius: 3px;
+  font-size: 15px;
+  color: white;
+}
+
+.hide-button:hover {
+  background-color: salmon;
+}
+
+.show-button {
+  float: right;
+  position: relative;
+  margin: 10px;
+  background-color: cornflowerblue;
+  border: none;
+  border-radius: 3px;
+  font-size: 15px;
+  color: white;
+}
+
+.show-button:hover {
+  background-color: green;
 }
