add fixed background

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -4,6 +4,7 @@ html {
   text-shadow: 1px 1px 1px black;
   font-family: 'Ubuntu', sans-serif;
   background-image: url('csgo_wall3.png');
+  background-attachment: fixed;
 }
 
 h1, h2, h3, h4, h5, h6 {
