--- a/app/templates/components/match-main.hbs
+++ b/app/templates/components/match-main.hbs
@@ -1,12 +1,12 @@
 <div class="match-main">
 
-  <div id="left" class={{if team1Selected 'selected'}} {{action "selectTeam" match.team_1}}>
+  <div id="left" class= {{if team1Selected 'selected'}} {{action "selectTeam" match.team_1}}>
     <h3>{{match.team_1.name}}</h3>
 
     <h1>{{team1Odds}}%</h1>
   </div>
 
-  <div id="right" class={{if team2Selected 'selected'}} {{action "selectTeam" match.team_2}}>
+  <div id="right" class= {{if team2Selected 'selected'}} {{action "selectTeam" match.team_2}}>
     <h3>{{match.team_2.name}}</h3>
 
     <h1>{{team2Odds}}%</h1>
@@ -24,12 +24,12 @@
       <div>{{errors}}</div>
     {{/if}}
 
-      <br>
-
-    {{#link-to "matches.bets" match}}View Bets{{/link-to}}
-
+    <br>
+    {{#if showBets}}
+      {{#link-to "matches.bets" match}}View Bets{{/link-to}}
+    {{/if}}
   </div>
 
 </div>
 
-  {{yield}}
+{{yield}}
