--- a/app/templates/matches/index.hbs
+++ b/app/templates/matches/index.hbs
@@ -1,4 +1,4 @@
-<h2 class="matches-header">Match of the Day</h2>
+<h2 class="matches-header">Matches of the Day</h2>
 
 {{#each model as |match|}}
   {{#match-main match=match teamSelected="teamSelected" showBets="showBets"}}
