need to buildurl for queryrecord

--- a/app/templates/components/match-main.hbs
+++ b/app/templates/components/match-main.hbs
@@ -26,7 +26,7 @@
 
     <br>
     {{#if showBets}}
-      {{#link-to "matches.bets" match}}View Bets{{/link-to}}
+      {{#link-to "matches.bets" match.id}}View Bets{{/link-to}}
     {{/if}}
   </div>
 
