--- a/app/templates/matches/bets.hbs
+++ b/app/templates/matches/bets.hbs
@@ -1,5 +1,4 @@
-{{#match-main match=model teamSelected="teamSelected"}}
-{{/match-main}}
+{{match-main match=model teamSelected="teamSelected"}}
 
 {{outlet}}
 
