add guest login

--- a/app/templates/components/login-form.hbs
+++ b/app/templates/components/login-form.hbs
@@ -14,6 +14,7 @@
 
     <br>
 
-    <button type="submit">Let Me Back In</button>
+    <button type="submit">Let Me Back In!</button>
+    <button {{action "guestLogin"}}>Sign in as Guest!</button>
 
 </form>
