--- a/app/templates/components/register-form.hbs
+++ b/app/templates/components/register-form.hbs
@@ -19,5 +19,6 @@
     <br>
 
     <button type="submit">I'm New and GN4</button>
+    <button {{action "guestLogin"}}>Sign in as Guest!</button>
 
 </form>
