--- a/app/templates/components/login-form.hbs
+++ b/app/templates/components/login-form.hbs
@@ -14,7 +14,7 @@
 
     <br>
 
-    <button type="submit">Let Me Back In!</button>
-    <button {{action "guestLogin"}}>Sign in as Guest!</button>
+    <button type="submit">Sign In!</button>
+    <button {{action "guestLogin"}}>Guest Login!</button>
 
 </form>
