--- a/app/templates/components/new-bet.hbs
+++ b/app/templates/components/new-bet.hbs
@@ -1,6 +1,6 @@
 <h3 class="price">${{totalValue}}</h3>
 {{#if ready}}
-  <button {{action "submitBet"}}>Submit Bet</button>
+  <button class="bet-button" {{action "submitBet"}}>Submit Bet</button>
 {{/if}}
 
 <br>
