--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -26,6 +26,9 @@ a {
   text-shadow: 1px 1px 1px black;
   font-size: 20px;
 }
+a:hover {
+  color: darkorange;
+}
 .logo-banner {
   background-color: rgb(45, 45, 45);
 }
