--- a/app/templates/components/footer-main.hbs
+++ b/app/templates/components/footer-main.hbs
@@ -11,7 +11,7 @@
       <li>- Start off by going into your profile page and depositing skins into your inventory, there's no limit!</li>
       <li>- Matches start eveyday at their specified time. If you haven't bet already, you can bet anytime before the match starts! </li>
       <li>- Bet on a team by clicking on it to show your inventory. There's a $10 minimum and a maximum of 10 skins!</li>
-      <li>- Come back around the time the match starts to watch live stats. Or check your inventory after the match is done to see if you won! Payouts will be determined based on the paramutuel betting system. GLHF!</li>
+      <li>- Come back around the time the match starts to watch live stats. Or check your inventory after the match is done to see if you won! Payouts will be determined based on the pari-mutuel betting system. GLHF!</li>
     </ul>
     {{/if}}
 </footer>
